# matrix-lib-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  justfile
.github/workflows/: build.yml  release.yml
cmake/: matrix-config.cmake.in
docs/: BUILD_GUIDE.md  api.md  build.md
examples/: benchmark.cpp  demo.cpp  simd_test.cpp
include/: matrix.hpp  matrix_algorithms.hpp  matrix_core.hpp  matrix_fwd.hpp  matrix_io.hpp  matrix_operators.hpp  matrix_operators_simd.hpp  matrix_properties.hpp  matrix_proxy.hpp  matrix_simd.hpp  matrix_utils.hpp
include/impl/: matrix_algorithms.tpp  matrix_core.tpp  matrix_io.tpp  matrix_operators.tpp  matrix_properties.tpp  matrix_proxy.tpp  matrix_utils.tpp
src/: matrix_instantiations.cpp  matrix_lib.cpp
tests/: main.cpp  test_algorithms.cpp  test_arithmetic.cpp  test_basic.cpp  test_core.cpp  test_edge_cases.cpp  test_framework.hpp  test_large_matrices.cpp  test_linalg.cpp  test_properties.cpp  test_proxy.cpp  test_types_perf.cpp
